[gd_scene load_steps=3 format=3 uid="uid://d2e880ndi6cjo"]

[ext_resource type="Script" path="res://scripts/interface_scripts/death_screen.gd" id="1_7ali2"]
[ext_resource type="Theme" uid="uid://lrvuwqkgvays" path="res://themes/default_theme.tres" id="1_8h8pq"]

[node name="death_scene" type="CanvasLayer"]
script = ExtResource("1_7ali2")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.698039, 0, 0.301961, 1)

[node name="Title" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.194
anchor_top = 0.111
anchor_right = 0.806
anchor_bottom = 0.295
offset_left = -183.488
offset_top = -7.928
offset_right = 198.488
offset_bottom = -0.159988
theme = ExtResource("1_8h8pq")
text = "DEFEAT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Retry" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.278
anchor_top = 0.605
anchor_right = 0.444
anchor_bottom = 0.693
offset_left = 191.744
offset_top = -8.04001
offset_right = 192.512
offset_bottom = -8.06403
theme = ExtResource("1_8h8pq")
text = "RETRY LEVEL"

[node name="Restart" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.278
anchor_top = 0.605
anchor_right = 0.444
anchor_bottom = 0.693
offset_left = -64.256
offset_top = -8.04001
offset_right = -27.488
offset_bottom = -8.06403
theme = ExtResource("1_8h8pq")
text = "RESTART GAME"

[node name="Main_Menu" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.556
anchor_top = 0.605
anchor_right = 0.722
anchor_bottom = 0.691
offset_left = 95.488
offset_top = -8.04001
offset_right = 96.256
offset_bottom = -6.76804
theme = ExtResource("1_8h8pq")
text = "MAIN MENU"

[connection signal="pressed" from="Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Main_Menu" to="." method="_on_main_menu_pressed"]
